# same-api-many-languages-different-protocols

./: README.md
basic-commerce-api-python/: Dockerfile  README.md  docker-compose.yml  hello.py  pyproject.toml
basic-commerce-api-python-graphql/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
basic-commerce-api-python-graphql/alembic/versions/: 5749ef10ae7a_create_models.py
basic-commerce-api-python-graphql/src/: config.py  db.py  main.py  models.py
basic-commerce-api-python-graphql/src/repository/: order_products_repository.py  orders_repository.py
basic-commerce-api-python-graphql/src/routes/: graphql_router.py  schemas.py  users.py
basic-commerce-api-python-grpc/: .gitignore  README.md  pyproject.toml
basic-commerce-api-python-grpc/proto/: users.proto
basic-commerce-api-python/alembic/: env.py
basic-commerce-api-python/alembic/versions/: 0efbfddc9d29_create_orders_products_table.py  28249da3a75a_create_orders_table.py  3181920e3a95_update_orders_table_to_include_updated_.py  9974e533abb6_create_users_table.py  ae1ca38e8c1f_create_product.py
basic-commerce-api-python/src/: config.py  db.py  initializers.py  main.py  models.py  security.py
basic-commerce-api-python/src/repository/: orders_repository.py  products_repository.py  users_repository.py
basic-commerce-api-python/src/routes/: api_key_validator.py  orders_routes.py  products_routes.py  schemas.py  users_routes.py
