[project]
name = "basic-commerce-api-python-grpc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "grpcio>=1.70.0",
    "grpcio-tools>=1.70.0",
    "protobuf>=5.29.4",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
