[project]
name = "basic-commerce-api-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115.11",
    "pydantic==1.10.11",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.33.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
