[project]
name = "basic-commerce-api-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "alembic>=1.14.1",
    "bcrypt>=4.3.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "passlib>=1.7.4",
    "psycopg2>=2.9.10",
    "pydantic[email]==1.10.11",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.33.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
